--- a/android-client/android-client/src/main/res/layout/activity_informacje_o_wskazowce.xml
+++ b/android-client/android-client/src/main/res/layout/activity_informacje_o_wskazowce.xml
@@ -59,21 +59,12 @@
     </ScrollView>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Następna"
-        android:id="@+id/button3"
-        android:layout_alignBottom="@+id/button2"
-        android:layout_alignRight="@+id/scrollView4"
-        android:layout_alignEnd="@+id/scrollView4" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Poprzednia"
         android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:text="Wróć" />
 
 </RelativeLayout>
