--- a/android-client/android-client/src/main/res/layout/activity_dodaj_wskazowke_2.xml
+++ b/android-client/android-client/src/main/res/layout/activity_dodaj_wskazowke_2.xml
@@ -64,41 +64,56 @@
                 android:orientation="horizontal"
                 android:showDividers="middle"
                 android:baselineAligned="false">
+                <!--
+                                <TextView
+                                    android:id="@+id/textView1"
+                                    android:layout_width="warp_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_column="1"
+                                    android:layout_weight="1"
+                                    android:paddingRight="10dp"
+                                    android:text="NR"
+                                    android:textAppearance="?android:attr/textAppearanceLarge"
+                                    android:textSize="15sp"/>
 
+                                <TextView
+                                    android:id="@+id/textView11"
+                                    android:layout_width="warp_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_column="2"
+                                    android:layout_weight="1"
+                                    android:paddingRight="10dp"
+                                    android:text="OPIS"
+                                    android:textAppearance="?android:attr/textAppearanceLarge"
+                                    android:textSize="15sp"/>
+
+
+                                <TextView
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:textAppearance="?android:attr/textAppearanceLarge"
+                                    android:text="ODLEGLOSC"
+                                    android:id="@+id/textView12"
+                                    android:layout_column="6"
+                                    android:layout_weight="1" />
+                  -->
                 <TextView
-                    android:id="@+id/textView1"
-                    android:layout_width="warp_content"
+                    android:layout_width="30dp"
                     android:layout_height="wrap_content"
-                    android:layout_column="1"
-                    android:layout_weight="1"
-                    android:paddingRight="10dp"
                     android:text="NR"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="15sp"
-                    android:textsice="5sp" />
+                    android:id="@+id/textView17" />
 
                 <TextView
-                    android:id="@+id/textView11"
-                    android:layout_width="warp_content"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:layout_column="2"
-                    android:layout_weight="1"
-                    android:paddingRight="10dp"
                     android:text="OPIS"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="15sp"
-                    android:textsice="5sp" />
+                    android:id="@+id/textView18" />
 
-<!--
                 <TextView
-                    android:layout_width="0dp"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="ODLEGLOSC"
-                    android:id="@+id/textView12"
-                    android:layout_column="6"
-                    android:layout_weight="1" />
-  -->
+                    android:text="KORDY"
+                    android:id="@+id/textView19" />
             </TableRow>
 
             </TableLayout>
