--- a/android-client/android-client/src/main/res/layout/activity_edycja_wskazowki.xml
+++ b/android-client/android-client/src/main/res/layout/activity_edycja_wskazowki.xml
@@ -139,13 +139,12 @@
         android:background="@drawable/XY"
         android:textOff=" "
         android:textOn=" "
-        android:onClick="Koordynaty_XY"
         android:checked="false" />
 
     <ImageButton
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:id="@+id/imageButton"
+        android:id="@+id/Kordy_z_mapy"
         android:layout_x="8dp"
         android:layout_y="200dp"
         android:background="@drawable/Mapa_ikona" />
